@@ -4,15 +4,14 @@
 
 package akka
 
-import java.io.{FileInputStream, InputStreamReader}
+import java.io.{ FileInputStream, InputStreamReader }
 import java.util.Properties
 
-import akka.TestExtras.JUnitFileReporting
 import com.typesafe.sbt.pgp.PgpKeys.publishSigned
 import sbt.Keys._
-import sbt.TestLogger.wrap
 import sbt._
 import sbtwhitesource.WhiteSourcePlugin.autoImport.whitesourceIgnore
+import scala.collection.breakOut
 
 object AkkaBuild {
 
@@ -21,31 +20,14 @@ object AkkaBuild {
   val parallelExecutionByDefault = false // TODO: enable this once we're sure it does not break things
 
   lazy val buildSettings = Dependencies.Versions ++ Seq(
-    organization        := "com.typesafe.akka",
-    version             := "2.5-SNAPSHOT"
-  )
+    organization := "com.typesafe.akka",
+    version := "2.5-SNAPSHOT")
 
-  lazy val rootSettings = parentSettings ++ Release.settings ++
+  lazy val rootSettings = Release.settings ++
     UnidocRoot.akkaSettings ++
+    Formatting.formatSettings ++
     Protobuf.settings ++ Seq(
-      parallelExecution in GlobalScope := System.getProperty("akka.parallelExecution", parallelExecutionByDefault.toString).toBoolean
-    )
-
-  val dontPublishSettings = Seq(
-    publishSigned := (),
-    publish := (),
-    publishArtifact in Compile := false,
-    whitesourceIgnore := true
-  )
-
-  val dontPublishDocsSettings = Seq(
-    sources in doc in Compile := List()
-  )
-
-
-  lazy val parentSettings = Seq(
-    publishArtifact := false
-  ) ++ dontPublishSettings
+      parallelExecution in GlobalScope := System.getProperty("akka.parallelExecution", parallelExecutionByDefault.toString).toBoolean)
 
   lazy val mayChangeSettings = Seq(
     description := """|This module of Akka is marked as
@@ -58,62 +40,71 @@ object AkkaBuild {
                       |refine and simplify based on your feedback. Additionally
                       |such a module may be dropped in major releases
                       |without prior deprecation.
-                      |""".stripMargin
-  )
+                      |""".stripMargin)
 
   val (mavenLocalResolver, mavenLocalResolverSettings) =
     System.getProperty("akka.build.M2Dir") match {
-      case null => (Resolver.mavenLocal, Seq.empty)
-      case path =>
+      case null ⇒ (Resolver.mavenLocal, Seq.empty)
+      case path ⇒
         // Maven resolver settings
+        def deliverPattern(outputPath: File): String =
+          (outputPath / "[artifact]-[revision](-[classifier]).[ext]").absolutePath
+
         val resolver = Resolver.file("user-publish-m2-local", new File(path))
         (resolver, Seq(
-          otherResolvers := resolver:: publishTo.value.toList,
-          publishM2Configuration := Classpaths.publishConfig(packagedArtifacts.value, None, resolverName = resolver.name, checksums = checksums.in(publishM2).value, logging = ivyLoggingLevel.value, overwrite = true)
-        ))
+          otherResolvers := resolver :: publishTo.value.toList,
+          publishM2Configuration := Classpaths.publishConfig(
+            publishMavenStyle.value,
+            deliverPattern(crossTarget.value),
+            if (isSnapshot.value) "integration" else "release",
+            ivyConfigurations.value.map(c => ConfigRef(c.name)).toVector,
+            artifacts = packagedArtifacts.value.toVector,
+            resolverName = resolver.name,
+            checksums = checksums.in(publishM2).value.toVector,
+            logging = ivyLoggingLevel.value,
+            overwrite = true)))
     }
 
   lazy val resolverSettings = {
     // should we be allowed to use artifacts published to the local maven repository
-    if(System.getProperty("akka.build.useLocalMavenResolver", "false").toBoolean)
+    if (System.getProperty("akka.build.useLocalMavenResolver", "false").toBoolean)
       Seq(resolvers += mavenLocalResolver)
     else Seq.empty
   } ++ {
     // should we be allowed to use artifacts from sonatype snapshots
-    if(System.getProperty("akka.build.useSnapshotSonatypeResolver", "false").toBoolean)
+    if (System.getProperty("akka.build.useSnapshotSonatypeResolver", "false").toBoolean)
       Seq(resolvers += Resolver.sonatypeRepo("snapshots"))
     else Seq.empty
   } ++ Seq(
-    pomIncludeRepository := (_ => false) // do not leak internal repositories during staging
+    pomIncludeRepository := (_ ⇒ false) // do not leak internal repositories during staging
   )
 
   private def allWarnings: Boolean = System.getProperty("akka.allwarnings", "false").toBoolean
 
   lazy val defaultSettings = resolverSettings ++
     TestExtras.Filter.settings ++
-    Protobuf.settings ++ Seq(
-    // compile options
-    scalacOptions in Compile ++= Seq("-encoding", "UTF-8", "-target:jvm-1.8", "-feature", "-unchecked", "-Xlog-reflective-calls", "-Xlint"),
-    scalacOptions in Compile ++= (if (allWarnings) Seq("-deprecation") else Nil),
-    scalacOptions in Test := (scalacOptions in Test).value.filterNot(opt =>
-      opt == "-Xlog-reflective-calls" || opt.contains("genjavadoc")),
-    // -XDignore.symbol.file suppresses sun.misc.Unsafe warnings
-    javacOptions in compile ++= Seq("-encoding", "UTF-8", "-source", "1.8", "-target", "1.8", "-Xlint:unchecked", "-XDignore.symbol.file"),
-    javacOptions in compile ++= (if (allWarnings) Seq("-Xlint:deprecation") else Nil),
-    javacOptions in doc ++= Seq(),
-    incOptions := incOptions.value.withNameHashing(true),
+    Protobuf.settings ++ Seq[Setting[_]](
+      // compile options
+      scalacOptions in Compile ++= Seq("-encoding", "UTF-8", "-target:jvm-1.8", "-feature", "-unchecked", "-Xlog-reflective-calls", "-Xlint"),
+      scalacOptions in Compile ++= (if (allWarnings) Seq("-deprecation") else Nil),
+      scalacOptions in Test := (scalacOptions in Test).value.filterNot(opt ⇒
+        opt == "-Xlog-reflective-calls" || opt.contains("genjavadoc")),
+      // -XDignore.symbol.file suppresses sun.misc.Unsafe warnings
+      javacOptions in compile ++= Seq("-encoding", "UTF-8", "-source", "1.8", "-target", "1.8", "-Xlint:unchecked", "-XDignore.symbol.file"),
+      javacOptions in compile ++= (if (allWarnings) Seq("-Xlint:deprecation") else Nil),
+      javacOptions in doc ++= Seq(),
 
-    crossVersion := CrossVersion.binary,
+      crossVersion := CrossVersion.binary,
 
-    ivyLoggingLevel in ThisBuild := UpdateLogging.Quiet,
+      ivyLoggingLevel in ThisBuild := UpdateLogging.Quiet,
 
-    licenses := Seq(("Apache License, Version 2.0", url("http://www.apache.org/licenses/LICENSE-2.0"))),
-    homepage := Some(url("http://akka.io/")),
+      licenses := Seq(("Apache License, Version 2.0", url("http://www.apache.org/licenses/LICENSE-2.0"))),
+      homepage := Some(url("http://akka.io/")),
 
-    apiURL := Some(url(s"http://doc.akka.io/api/akka/${version.value}")),
+      apiURL := Some(url(s"http://doc.akka.io/api/akka/${version.value}")),
 
-    initialCommands :=
-      """|import language.postfixOps
+      initialCommands :=
+        """|import language.postfixOps
          |import akka.actor._
          |import ActorDSL._
          |import scala.concurrent._
@@ -129,44 +120,77 @@ object AkkaBuild {
          |implicit val timeout = Timeout(5 seconds)
          |""".stripMargin,
 
-    /**
-     * Test settings
-     */
+      /**
+       * Test settings
+       */
+      fork in Test := true,
 
-    parallelExecution in Test := System.getProperty("akka.parallelExecution", parallelExecutionByDefault.toString).toBoolean,
-    logBuffered in Test := System.getProperty("akka.logBufferedTests", "false").toBoolean,
+      // default JVM config for tests
+      javaOptions in Test ++= {
+        val defaults = Seq(
+          // ## core memory settings
+          "-XX:+UseG1GC",
+          // most tests actually don't really use _that_ much memory (>1g usually)
+          // twice used (and then some) keeps G1GC happy - very few or to no full gcs
+          "-Xms3g", "-Xmx3g",
+          // increase stack size (todo why?)
+          "-Xss2m",
 
-    // show full stack traces and test case durations
-    testOptions in Test += Tests.Argument("-oDF"),
+          // ## extra memory/gc tuning
+          // this breaks jstat, but could avoid costly syncs to disc see http://www.evanjones.ca/jvm-mmap-pause.html
+          "-XX:+PerfDisableSharedMem",
+          // tell G1GC that we would be really happy if all GC pauses could be kept below this as higher would
+          // likely start causing test failures in timing tests
+          "-XX:MaxGCPauseMillis=300",
+          // nio direct memory limit for artery/aeron (probably)
+          "-XX:MaxDirectMemorySize=256m",
 
-    // don't save test output to a file, workaround for https://github.com/sbt/sbt/issues/937
-    testListeners in (Test, test) := {
-      val logger = streams.value.log
+          // faster random source
+          "-Djava.security.egd=file:/dev/./urandom")
 
-      def contentLogger(log: sbt.Logger, buffered: Boolean): ContentLogger = {
-        val blog = new BufferedLogger(FullLogger(log))
-        if (buffered) blog.record()
-        new ContentLogger(wrap(blog), () => blog.stopQuietly())
-      }
+        if (sys.props.contains("akka.ci-server"))
+          defaults ++ Seq("-XX:+PrintGCTimeStamps", "-XX:+PrintGCDetails")
+        else
+          defaults
+      },
 
-      val logTest = {_: TestDefinition => streams.value.log }
-      val buffered = logBuffered.value
-      Seq(new TestLogger(new TestLogging(wrap(logger), tdef => contentLogger(logTest(tdef), buffered))))
-    },
+      // all system properties passed to sbt prefixed with "akka." will be passed on to the forked jvms as is
+      javaOptions in Test := {
+        val base = (javaOptions in Test).value
+        val akkaSysProps: Seq[String] =
+          sys.props.filter(_._1.startsWith("akka"))
+            .map { case (key, value) ⇒ s"-D$key=$value" }(breakOut)
 
-    // -v Log "test run started" / "test started" / "test run finished" events on log level "info" instead of "debug".
-    // -a Show stack traces and exception class name for AssertionErrors.
-    testOptions += Tests.Argument(TestFrameworks.JUnit, "-v", "-a")
-  ) ++
-    mavenLocalResolverSettings ++
-    JUnitFileReporting.settings ++
-    docLintingSettings
+        base ++ akkaSysProps
+      },
+
+      // with forked tests the working directory is set to each module's home directory
+      // rather than the Akka root, some tests depend on Akka root being working dir, so reset
+      testGrouping in Test := {
+        val original: Seq[Tests.Group] = (testGrouping in Test).value
+
+        original.map { group ⇒
+          group.runPolicy match {
+            case Tests.SubProcess(forkOptions) ⇒
+              group.copy(runPolicy = Tests.SubProcess(forkOptions.withWorkingDirectory(
+                workingDirectory = Some(new File(System.getProperty("user.dir"))))))
+            case _ ⇒ group
+          }
+        }
+      },
+
+      parallelExecution in Test := System.getProperty("akka.parallelExecution", parallelExecutionByDefault.toString).toBoolean,
+      logBuffered in Test := System.getProperty("akka.logBufferedTests", "false").toBoolean,
+
+      // show full stack traces and test case durations
+      testOptions in Test += Tests.Argument("-oDF")) ++
+      mavenLocalResolverSettings ++
+      docLintingSettings
 
   lazy val docLintingSettings = Seq(
-     javacOptions in compile ++= Seq("-Xdoclint:none"),
-     javacOptions in test ++= Seq("-Xdoclint:none"),
-     javacOptions in doc ++= Seq("-Xdoclint:none")
-   )
+    javacOptions in compile ++= Seq("-Xdoclint:none"),
+    javacOptions in test ++= Seq("-Xdoclint:none"),
+    javacOptions in doc ++= Seq("-Xdoclint:none"))
 
   def loadSystemProperties(fileName: String): Unit = {
     import scala.collection.JavaConverters._
@@ -181,5 +205,5 @@ object AkkaBuild {
     }
   }
 
-  def majorMinor(version: String): Option[String] ="""\d+\.\d+""".r.findFirstIn(version)
+  def majorMinor(version: String): Option[String] = """\d+\.\d+""".r.findFirstIn(version)
 }
